src/objects/Grant_Installment__c.object
<CustomObject>
    <description>Sum of money due as one of the several payments for the grant</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Sum of money for the current installment</description>
        <label>Amount</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Date__c</fullName>
        <description>Current date</description>
        <label>Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipLabel>Grant Installments</relationshipLabel>
        <relationshipName>Grant_Installments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Grant Installment</label>
    <nameField>
        <displayFormat>GI-{00000}</displayFormat>
        <label>Grant Installment  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Installments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>